# unofficial-academia-clash-builder

./: .gitignore  Cargo.toml  DISCLAIMER.md  LEGAL.md  LICENSE  NOTICE.md  PRIVACY.md  README.md  README.zh-CN.md  RELEASE_NOTES.md  RUNNING.md
.github/workflows/: release.yml
src/: main.rs
web/: index.html  package.json
web/src/: app.js  styles.css  transform.js
